policies/selinux-role/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: selinux-role-pod
  namespace: policy-test
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
  securityContext:
    seLinuxOptions:
      role: role_r
