policies/selinux-role/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-role-namespace-optout-warn
spec:
  policyName: check-selinux-role
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: selinux-role.pss.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-role-namespace-optin-warn
spec:
  policyName: check-selinux-role
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: selinux-role.pss.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-role-namespace-optout-audit
spec:
  policyName: check-selinux-role
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: selinux-role.pss.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-role-namespace-optin-audit
spec:
  policyName: check-selinux-role
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: selinux-role.pss.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-role-namespace-optout-deny
spec:
  policyName: check-selinux-role
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: selinux-role.pss.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-selinux-role-namespace-optin-deny
spec:
  policyName: check-selinux-role
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: selinux-role.pss.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
